@startuml ER_SportRental

hide empty methods
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

entity users {
    * user_id : SERIAL <<PK>>
    --
    * email : VARCHAR(255)
    * full_name : VARCHAR(255)
    phone : VARCHAR(20)
    rating : NUMERIC(3,2)
    * created_at : TIMESTAMP
}

entity equipment_categories {
    * category_id : SERIAL <<PK>>
    --
    * name : VARCHAR(100)
    description : TEXT
}

entity equipment {
    * equipment_id : SERIAL <<PK>>
    --
    * owner_id : INTEGER <<FK>>
    * category_id : INTEGER <<FK>>
    * title : VARCHAR(255)
    description : TEXT
    * price_per_day : NUMERIC(10,2)
    * is_available : BOOLEAN
    location : VARCHAR(255)
    * created_at : TIMESTAMP
}

entity rentals {
    * rental_id : SERIAL <<PK>>
    --
    * equipment_id : INTEGER <<FK>>
    * renter_id : INTEGER <<FK>>
    * start_date : DATE
    * end_date : DATE
    * total_price : NUMERIC(10,2)
    * status : VARCHAR(20)
    * created_at : TIMESTAMP
}

entity payments {
    * payment_id : SERIAL <<PK>>
    --
    * rental_id : INTEGER <<FK>>
    * amount : NUMERIC(10,2)
    payment_method : VARCHAR(50)
    * status : VARCHAR(20)
    paid_at : TIMESTAMP
}

entity reviews {
    * review_id : SERIAL <<PK>>
    --
    * rental_id : INTEGER <<FK>>
    * rating : SMALLINT
    comment : TEXT
    * created_at : TIMESTAMP
}

users ||--o{ equipment : "владеет"
users ||--o{ rentals : "арендует"
equipment_categories ||--o{ equipment : "категория"
equipment ||--o{ rentals : "бронируется"
rentals ||--o{ payments : "оплачивается"
rentals ||--o| reviews : "оценивается"

@enduml